Fix validation (#573)
